--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hoeseok Yang"
   avatar           : "hoeseok.jpg"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Associate Professor at Santa Clara University, Department of Electrical and Computer Engineering"
   location         : "Santa Clara, California"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
